v1.0.0
	- Initial version
v1.1.0
	- issue PROG-16
	- Add db logging in style class