@@ -3,3 +3,4 @@ v1.0.0
 v1.1.0
 	- issue PROG-16
 	- Add db logging in style class
+	- style class cosmetic changes
